# flask-demo

./: .gitignore  Makefile  README.md  app.py  products.py  pyproject.toml
app/: __init__.py  products.py
app/templates/: index.html  product.html
tests/: support.py  test_app.py
tests/e2e/: conftest.py  pages.py  test_app.py
tests/integration/: conftest.py  fakes.py  pages.py  test_app.py
tests/unit/: conftest.py  test_products.py  test_unit_app.py
