[project]
name = "flask-demo"
version = "1.0.0"
dependencies = [
    "flask",
    "inject"
]

[project.optional-dependencies]
dev = [
    "beautifulsoup4",
    "black",
    "isort",
    "mypy",
    "pylint",
    "pytest",
    "pytest-flask",
    "pytest-playwright",
    "types-beautifulsoup4"
]

[tool.isort]
profile = "black"

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "too-few-public-methods"
]
good-names = ["id"]
